# Blog_aapi

./: .env  .gitignore  README.md  alembic.ini  dependencies.py  main.py  models.py  pyproject.toml  schemas.py
app/: dependencies.py  main.py  models.py  settings.py
app/models/: post.py  user.py
app/schemas/: post_schema.py  user_schema.py
migration_files/versions/: 6374ec4bc45b_create_table_user_and_post.py
migrations_file/: env.py
migrations_file/versions/: 3b95adfbb76f_create_table_user_and_post.py  94c75a7e1d5d_create_table_post_and_user.py
