[tool.poetry]
name = "blog-api"
version = "0.1.0"
description = "Blod API"
authors = ["Aayush Dip Giri <aayush.giri@codavatar.tech>"]
readme = "README.md"
packages = [{include = "blog_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.19"
uvicorn = "^0.23.1"
psycopg-binary = "^3.1.9"
python-dotenv = "^1.0.0"
bcrypt = "^4.0.1"
annotated = "^0.0.2"
alembic = "^1.11.1"
fastapi-sqlalchemy = "^0.2.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pydantic-settings = "^2.0.2"
python-multipart = "^0.0.6"
psycopg2-binary = "^2.9.6"
pydantic = {extras = ["email"], version = "^2.0.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
